Solar System Made

--- a/MathForGames/MathForGames.csproj
+++ b/MathForGames/MathForGames.csproj
@@ -7,14 +7,31 @@
 
   <ItemGroup>
     <None Remove="enemy.png" />
+    <None Remove="Images\earth.png" />
+    <None Remove="Images\planet.png" />
+    <None Remove="Images\planet2.png" />
+    <None Remove="Images\star.png" />
+    <None Remove="Images\sun.png" />
     <None Remove="player.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Images\earth.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\enemy.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\planet2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\player.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\star.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\sun.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -25,6 +42,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MathLibrary\MathLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Images\planet.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
